updated notebook for presentation

--- a/Recognizing_Handwritten_Digits_pytorch.ipynb
+++ b/Recognizing_Handwritten_Digits_pytorch.ipynb
@@ -467,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy:  0.964003164556962\n"
+      "accuracy:  0.968\n"
      ]
     }
    ],
